--- a/project_page/index.html
+++ b/project_page/index.html
@@ -150,9 +150,9 @@
 
 <style>
   .container {
-    width: 90%; /* 内容宽度与屏幕一致 */
-    max-width: 1440px; /* 最大宽度限制为1200px，适应大屏 */
-    margin: auto; /* 水平居中 */
+    width: 90%;
+    max-width: 1440px;
+    margin: auto;
   }
 
   table {
@@ -190,12 +190,11 @@
   }
 
   tr:first-child th, tr:first-child td {
-    height: 30px; /* 强制限制高度 */
-    overflow: hidden; /* 防止内容溢出 */
-    line-height: 30px; /* 垂直居中 */
+    height: 30px;
+    overflow: hidden;
+    line-height: 30px;
   }
 
-  /* 图片样式 */
   .image-container img {
     width: 130%;
     height: auto;
@@ -350,7 +349,6 @@
 
       </div>
     </div>
-    <!--/ Method. -->
 </section>
 
 <section class="section">
